Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignObjectField.quorum
class Main
    Object v
    undefined t = 
    action Main
        v = cast(Object, t)
        Test(v)
    end

    action Test(undefined var)
    end
end
